--- a/src/index.html
+++ b/src/index.html
@@ -10,44 +10,78 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/style.min.css" />
-    <link rel="stylesheet" href="./assets/fonts/Roboto-Bold.ttf">
-    <link rel="stylesheet" href="./assets/fonts/Roboto-Regular.ttf">
-   </head>
+    <link rel="stylesheet" href="./assets/fonts/Roboto-Bold.ttf" />
+    <link rel="stylesheet" href="./assets/fonts/Roboto-Regular.ttf" />
+  </head>
   <body>
     <div class="container">
-        <main>
-            <section>
-                <h1>Stay updated!</h1>
-                <p>Join 60.000+ products managers receving monthly updates on: </p>
-                <ul>
-                    <li>
-                        <img src="./assets/images/icon-list.svg" alt="icon-list" srcset="">
-                        <p>Product discovery and building what matters</p>
-                    </li>
-                    <li>
-                        <img src="./assets/images/icon-list.svg" alt="icon-list" srcset="">
-                        <p>Mesure to ensure updates are a success</p>
-                    </li>
-                    <li>
-                        <img src="./assets/images/icon-list.svg" alt="icon-list" srcset="">
-                        <p>And much more</p>
-                    </li>
-                </ul>
+      <main>
+        <section>
+          <h1>Stay updated!</h1>
+          <p>Join 60.000+ products managers receving monthly updates on:</p>
+          <ul>
+            <li>
+              <img
+                src="./assets/images/icon-list.svg"
+                alt="icon-list"
+                srcset=""
+              />
+              <p>Product discovery and building what matters</p>
+            </li>
+            <li>
+              <img
+                src="./assets/images/icon-list.svg"
+                alt="icon-list"
+                srcset=""
+              />
+              <p>Mesure to ensure updates are a success</p>
+            </li>
+            <li>
+              <img
+                src="./assets/images/icon-list.svg"
+                alt="icon-list"
+                srcset=""
+              />
+              <p>And much more</p>
+            </li>
+          </ul>
 
-                <form action="">
-                    <label for="input-email">Email address</label>
-                    <input type="text" id="input-email" placeholder="email@company.com">
-                    <button type="submit">Subscribe to monthly newsletter</button>
-                </form>
-                
-            </section>
-            <picture>
-                <img src="./assets/images/illustration-sign-up-desktop.svg" alt="">
-                <!-- <img src="./assets/images/illustration-sign-up-mobile.svg" alt=""> -->
-            </picture>
-        </main>
+          <form id="form-newsletter">
+            <div class="container-label-input">
+              <label for="input-email">Email address</label>
+              <span>Valid email required</span>
+            </div>
+            <input
+              type="text"
+              id="input-email"
+              name="input-email"
+              placeholder="email@company.com"
+            />
+            <button type="button" id="submitBtn">
+              Subscribe to monthly newsletter
+            </button>
+            <!-- <button type="submit"></button> -->
+            <!-- <a href="./sended.html"></a> -->
+          </form>
+        </section>
+        <picture>
+          <img src="./assets/images/illustration-sign-up-desktop.svg" alt="" />
+        </picture>
+      </main>
     </div>
-    
+
+    <div class="container-card">
+      <main>
+        <section>
+          <img src="./assets/images/icon-list.svg" alt="icon-list" srcset="" />
+          <h1>Thanks for Subscribing!</h1>
+          <p>Join 60.000+ products managers receving monthly updates on:</p>
+          <p>client email: <span id="client-email">--</span></p>
+          <button id="closeCard">Dismiss message</button>
+        </section>
+      </main>
+    </div>
+
     <script src="./js/build.min.js"></script>
   </body>
 </html>
