resolved bugs and changed styles

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
               name="input-email"
               placeholder="email@company.com"
             />
-            <button type="button" id="submitBtn">
+            <button type="button" id="submitBtn" disabled class="disable">
               Subscribe to monthly newsletter
             </button>
           </form>
